--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -86,3 +86,103 @@ enableToc: true
 - Extrinsic:
 	- Evaluation on real tasks
 	- Long time to compute.
+## Summary
+Word vectors are numerical representations of words that, unlike bag-of-words representations, can encode semantic relationships between words in a continuous vector space. Additionally, word vectors are generally smaller in dimension compared to bag-of-words representations, which makes computations more efficient.
+
+Word2vec is a popular word vector algorithm. It uses a neural architecture to learn word representations from a large corpus of text by predicting the likelihood of a context word given a center word.
+
+# Lecture 2: Backpropagation and Neural Networks
+\* I cover most of this lecture in my [Backpropagation Article](BackProp.md). \*
+
+## Parts I Didn't Cover
+### Regularization
+- Regularization is a technique used to prevent overfitting in machine learning models. One way of implementing this is modifying the cost function to the following:
+$$ J(\theta) = \frac{1}{N}\sum_{i=1}^{N}-\log(\frac{e^{f_{y_i}}}{\sum e^{f_c}}) + \lambda \sum_k \theta_k^2 $$
+This modification adds a term to the cost function that will penalize large values of the parameters $\theta$.
+### Dropout
+- Dropout is a more common regularization technique that is used in neural networks.
+- At each training step, we randomly set 50% of the inputs to each neuron to 0, which will thereby prevent the neuron from being activated.
+- This prevents the network from relying on any one neuron, and forces it to learn more robust representations.
+
+### Other Notes
+- Initialize all the weights to random values
+- Adam optimizer is usually the best.
+
+# Lecture 3: Recurrent Neural Networks and Language Models
+### What is Language Modeling?
+- Language modeling is the task of predicting what word comes next in a sequence of words.
+- Ex: "The students opened their ________"
+- More formally:
+	- Given a sequence of words $w_1, w_2, \dots, w_n$, compute the probability distribution of the next word $w_{n+1}$.
+	$$ P(w_{n+1} | w_1, w_2, \dots, w_n) \\$$
+	$$ x_{n+1} \in V = \{x_1, x_2, \dots, x_{|V|}\} $$
+- N-Gram Language Models
+	- An N-Gram is a chunk of N consecutive words.
+	- Idea: Collect the statistics of how frequent different N-grams occur in a large corpus of text and build a probability distribution over the next word based on the N-gram that precedes it.
+	- This is based in the Markovian Assumption, which states that the probability of $x_{n+1}$ only depends on the previous N-1 words.
+	- Sparsity Problem:
+		- There is a large probability that a specific sequence of words will never occur in a corpus, and as $N$ increases, the probability of this happening increases exponentially.
+	- Storage Problem:
+		- Storing all the possible N-Grams takes too much storage
+- Neural Language Models:
+	- We can take the Markovian Assumption of the N-Gram model and apply the same idea to a neural network with word embeddings as seen below:
+	![neural lm](/notes/images/neural_lm.png)
+	- The nerual network takes a fixed window of N words as inputs and feeds their word embeddings into a neural network. The output of the neural network is a probability distribution over the entire vocabulary.
+	- This allows distributed representations of words, so it solves storage and sparsity problems.
+	It does not allow us to use bigger/variable length context windows, and it does not give us a sense of the order of the words in the sentence.
+### Recurrent Neural Networks
+- RNNs are a type of neural network that allows us to use variable length context windows and also gives us a sense of the order of the words in the sentence.
+- The Basic Idea:
+	- We feed in the first word of the sentence in to the network and receive an output vector. We then feed the second word of the sentence into the same network, but we also feed in the output of the hidden layer from the first word. We then receive a new output vector. We continue this process until we have processed the entire sentence. Feeding the output of the hidden layer from the previous word allows us to use the context of the previous words in the sentence.
+	![rnn](/notes/images/RNN.png)
+- Simple RNN:
+	- Let $x^{(t)}$ be the input vector at time step $t$, $h^{(t)}$ be the hidden state at time step $t$, and $y^{(t)}$ be the output at time step $t$.
+	- $\hat{y}^{(t)} = softmax(Uh^{(t)} + b_2) $
+	- $h^{(t)} = \sigma(W_hh^{(t-1)} + W_ee^{(t)} + b_1)$
+	- $ e^{(t)} = Ex^{(t)} $
+	- $ W_h, W_e, U, b_1, b_2 $ are the parameters of the network.
+	- $ \sigma $ is the sigmoid function.
+	- $x^{(t)}$ is the input vector at time step $t$.
+- Training an RNN Model:
+	- We get a big corpus of text $D = \{x^{(1)}, x^{(2)}, \dots, x^{(T)}\}$, and we feed it into an RNN-based language model.
+	- At each time step $t$, we comput the distribution over the next word $y^{(t)}$.
+	- The loss function will be a cross-entropy loss function between the predicted distribution and the actual distribution:
+	$$ J(\theta) = - \sum_{w \in V}y_w^{(t)}\log(\hat{y}^{(t)}_w) = -\log(\hat{y}^{(t)}_w) $$
+	- We average this loss for the entire dataset at each time step.
+	- Teacher Forcing:
+		- If the model gets a word wrong in the sequence, we don't want to feed the wrong word back into the model for training. Instead, we feed the correct word back into the model.
+	- Computing the gradient across the entire corpus is too expensive:
+		- We cut the corpus into _batches_ of sentences and use __Stochastic Gradient Descent__ to train the model in a more computationally efficient manner.
+	- Backpropagation Through Time:
+		- What is the derivative of $J^{(t)}(\theta)$ with respect to $W_h$?
+			- $$ \frac{\partial J^{(t)}}{\partial W_h} = \sum_{i=1}^{t}\frac{\partial J^{(i)}}{\partial W_h}$$
+			- The gradient with respect to the repeated weight matrix is the sum of the gradient with respect to each time it appears.
+			- Each value in the sum will be different because the hidden state at each time step is different, and there is a different upstream gradient at each time step.
+- Generating Text with RNN Model:
+	- We can use the RNN model to generate text be repreated sampling of the output as the next input
+
+### Problems with Recurrent Neural Networks
+- Vanishing and Exploding Gradient Problem:
+	- Let's say we are calculating the gradient of $J^{(k)}(\theta)$ with respect to $h^{(m)}$, such that $m << k$. We would get the following:
+	$$ \frac{\partial J^{(k)}}{\partial h^{(m)}} = \frac{\partial J^{(k)}}{\partial h^{(k)}}\frac{\partial h^{(k)}}{\partial h^{(k-1)}}\frac{\partial h^{(k-2)}}{\partial h^{(k-2)}}\dots\frac{\partial h^{(m + 1)}}{\partial h^{(m)}} $$
+	- If all of these partial derivatives are less than 1, then the gradient will be exponentially small, which will prevent the gradient to propagate back to the earlier layers, making it harder for the earlier layers to learn. This is called the __vanishing gradient problem__.
+	- If all of these partial derivatives are greater than 1, then the gradient will be exponentially large, which will cause the gradient to explode and the weights will become too large. If the gradient becomes too large, we can get a bad update and teach a bad parameter. This is called the __exploding gradient problem__.
+		- Exploding gradient has an easy fix: we can just clip the gradient to a maximum value that we decide.
+	- Vanishing gradient is a harder problem to solve.
+		- We can use __Long Short-Term Memory (LSTM)__ networks to solve this problem.
+
+## Long Short-Term Memory (LSTM) Networks
+- LSTM Networks are a type of RNN that allow us to "choose" what information to keep and what information to forget as we go from one time step to the next.
+- At each time step $t$, there is an input vector $x^{(t)}$, a hidden state $h^{(t)}$, a cell state $c^{(t)}$, and an output vector $y^{(t)}$.
+- The cell state:
+	- The cell state helps store long-term information, and contains gates such that we can read, erase, and write information to the cell state that we want to.
+- At time step $t$, given the input vector $x^{(t)}$:
+	- to erase (forget): $f^{(t)} = \sigma(W_fh^{(t-1)} + U_f x^{(t)} + b_f)$
+	- to write: $i^{(t)} = \sigma(W_ih^{(t-1)} + U_i x^{(t)} + b_i)$
+	- to read: $o^{(t)} = \sigma(W_oh^{(t-1)} + U_o x^{(t)} + b_o)$
+- To write new cell content $\tilde{c}^{(t)}$:
+	- $\tilde{c}^{(t)} = tanh(W_c h^{(t-1)} + U_c x^{(t)} + b_c)$
+	- $c^{(t)} = f^{(t)} \odot c^{(t-1)} + i^{(t)} \odot \tilde{c}^{(t)}$
+	- $h^{(t)} = o^{(t)} \odot tanh(c^{(t)})$
+In $\tilde{c}^{(t)}$, we are computing the new cell content how we normally would. We multiply the information from the previous hidden state by a weight matrix $W_c$, and we multiply the input vector by a weight matrix $U_c$. We then add a bias $b_c$ and apply the tanh function. After this, to get the new cell state, we perform an elementwise multiplication between the lass cell state with the forget gate $f^{(t)}$ to "forget" information we don't need. We then add the new cell content $\tilde{c}^{(t)}$ multiplied by the write gate $i^{(t)}$ to add the new information. We then compute the new hidden state by multiplying the cell state by the read gate $o^{(t)}$ and applying the tanh function.
+![image](/notes/images/lstm.png)
