Fix latex parsing issue

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -114,7 +114,7 @@ This modification adds a term to the cost function that will penalize large valu
 - Ex: "The students opened their ________"
 - More formally:
 	- Given a sequence of words $w_1, w_2, \dots, w_n$, compute the probability distribution of the next word $w_{n+1}$.
-	$$ P(w_{n+1} | w_1, w_2, \dots, w_n) \\$$
+	$$ P(w_{n+1} | w_1, w_2, \dots, w_n) $$
 	$$ x_{n+1} \in V = \{x_1, x_2, \dots, x_{|V|}\} $$
 - N-Gram Language Models
 	- An N-Gram is a chunk of N consecutive words.
