Add Lecture 4 of CS224n

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -186,3 +186,90 @@ This modification adds a term to the cost function that will penalize large valu
 	- $h^{(t)} = o^{(t)} \odot tanh(c^{(t)})$
 In $\tilde{c}^{(t)}$, we are computing the new cell content how we normally would. We multiply the information from the previous hidden state by a weight matrix $W_c$, and we multiply the input vector by a weight matrix $U_c$. We then add a bias $b_c$ and apply the tanh function. After this, to get the new cell state, we perform an elementwise multiplication between the lass cell state with the forget gate $f^{(t)}$ to "forget" information we don't need. We then add the new cell content $\tilde{c}^{(t)}$ multiplied by the write gate $i^{(t)}$ to add the new information. We then compute the new hidden state by multiplying the cell state by the read gate $o^{(t)}$ and applying the tanh function.
 ![image](/notes/images/lstm.png)
+
+# Lecture 4: Sequence-to-Sequence Models, Machine Translation and Attention
+## Translation
+### Statistical Machine Translation
+- Before Neural Machine Translation (NMT), we used Statistical Machine Translation (SMT), which was building probabilistic models from large amounts of data.
+- The core objective was $\argmax_y\{P(y | x)\}$, where $x$ is the source sentence and $y$ is the target sentence. Using Bayes' Rule, we get:
+$$ \argmax_y\{P(y | x)\} = \argmax_y\{P(x | y)P(y)\} $$
+- In this case $P(x | y)$ is the translation model, and $P(y)$ is the language model. To learn these models, we would need large amounts of parallel data.
+- We would also need to take into account alignment between the source and target sentences because different languages put words in different orders.
+![alignment](/notes/images/alignment.png)
+- Taking into account all of this can get really complex.
+
+### Neural Machine Translation
+- Neural Machine Translation is the idea of doing machine translation with a single end-to-end neural network.
+- This is done using a **sequence-to-sequence model**.
+	- This involves two neural networks: an **encoder** and a **decoder**.
+	- The encoder takes the source sentence as input and encodes it into a vector, and the decoder takes the vector as input and decodes it into the target sentence.
+	- This architecture is very versatile, as it can be used for many tasks:
+		- Machine Translation
+		- Dialogue
+		- Parsing
+		- Code Generation
+- For Neural Machine Translation with a Recurrent Neural Network Seq2Seq model, the source sentence is passed through the encoder, and the last hidden state of the encoder is the final encoded vector of the source sentence This vector will be passed into the start of the decoder model as context, so it can be used to help generate the target sentence.
+![seq2seq](/notes/images/seq2seq.png)
+
+#### Conditional Language Model
+- The decoder is considered a conditional language model because its objective is to predict the next word in the target sentence given previous words and the context vector from the encoder.
+
+#### Training Neural Machine Translation Models
+- Training the model will still require large amounts of parallel data.
+- The seq2seq model is optimized as one huge system, so all weights are updated at the same time/iteration.
+- We take the Cross-Entropy Loss at each time step of the decoder model, and sum them up to get the total loss.
+- This loss is then backpropagated through the entire network to update all of the weights, including the encoder.
+
+#### Decoding Neural Machine Translation Models
+- There are many approaches to performing decoding of the seq2seq model. Decoding is the process of generating the target sentence given the source sentence.
+- Greedy Decoding:
+	- This is the most intuitive approach to decoding.
+	- At each time step, pick the word that has the highest probability of being the next word.
+	- This comes with the problem of not being able to undo a decision. Once a decision has been made, it has to be stuck with.
+- Exhaustive Search Decoding:
+	- We basically try all possible combinations of words and pick the one with the highest probability.
+	- This is the complete opposite of greedy decoding. While it may generate a better sentence, it is very computationally expensive, so it is not feasible.
+- Beam Search Decoding:
+	- This is the middle point between greedy decoding and exhaustive search decoding, and is most commonly used.
+	- On each step of the decoder, keep track of the top $k$ most likely sentences and their probabilities.
+	- At each time step, only keep the top $k$ most likely sentences, and discard the rest, and keep repeating until all hypotheses reach an ending token.
+
+#### Advantages and Disadvantages of Neural Machine Translation
+- We generally receive better quality translations than SMT, as there is better use of context and better use of phrase similarities.
+- There is also far less engineering effort required
+- However, it is not as interpretable, making it harder to debug, and it is difficult to control.
+
+#### Evaluation of Machine Translation
+- The general standard for measuring performance of machine translation is the BLEU (Bilingual Evaluation Understudy) score.
+	- With this, you compare the generated translation with several reference human translations and compute a similarity score.
+#### Difficulties of Machine Translation
+- We have to consider many things:
+	- Out-of-vocabulary words
+		- There will be words in the source sentence that are not in the vocabulary of the model due to spelling mistakes, slang, etc.
+	- Low-Resource Languages
+		- There may not be enough data to train a good model for low-resource languages.
+	- Gender Biases
+		- Gender biases are usually picked up by the model, and it is difficult to remove them.
+## Attention
+- In regular seq2seq models, there is one core issue: All of the information from the source sentence that the decoder has to use is encoded into a singular vector at the last hidden state. This is an information bottleneck, as the decoder has to use this one vector to generate the entire target sentence.
+
+- Core Idea of Attention: At each step of the decoder, use direct connections to the encoder to focus on particular parts of the source sentence.
+![attention](/notes/images/attention.png)
+
+### Attention in Equations
+- We have hidden states $h_1, h_2, ..., h_n \in \mathbb{R}^h$ from the encoder.
+- At each time step $t$, we have decoder state $s_t \in \mathbb{R}^h$.
+- Attnetion scores for each hidden state at this encoder state are computed as follows:
+$$ e_t = \begin{bmatrix} s_t^T h_1, s_t^T h_2 \dots s_t^T h_n\end{bmatrix}$$
+- We then apply the softmax function to get the attention weights:
+$$ \alpha_t = \text{softmax}(e_t) $$
+- We then compute a weighted sum of the hidden states with the attention weights to get the context vector $a_t$:
+$$ a_t = \sum_{i=1}^n \alpha_{t,i}h_i $$
+
+- We then concatenate the attention vector $a_t$ with the decoder state $s_t$ to get the final context vector $c_t \in \mathbb{R}^{2h}$
+### Advantages of Attention
+- This significantly improves the performance of the model, as it is able to focus on the parts of the source sentence that are most relevant to the current step of the decoder.
+- Helps solve information bottleneck problem.
+- Helps solve vanishing gradient problem.
+- Helps solve long-term dependency problem.
+- Provides some form of interpretability.
