Add transformer lecture

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -273,3 +273,144 @@ $$ a_t = \sum_{i=1}^n \alpha_{t,i}h_i $$
 - Helps solve vanishing gradient problem.
 - Helps solve long-term dependency problem.
 - Provides some form of interpretability.
+
+# Lecture 5: Self-Attention and Transformers
+Previously, we looked at Recurrent Neural Networks/Long Short-Term Memory Networks and how they can be used for sequence-to-sequence models paired with attention.
+- Encode input sequence into a vector using an encoder such as a Bi-LSTM.
+- Feed the encoded vector into a decoder such as an LSTM and attention mechanism to generate the output sequence.
+- This creates a seq2seq model that can be used for machine translation, dialogue, parsing, etc.
+
+Problems with this approach:
+- Linear Interaction Distance:
+	- RNN's encode linear locality, so nearby words affect each others meanings.
+	- However, it takes $O(\text{length of sequence})$ for distant pairs of words to interact
+	- Makes it hard to learn long-range dependencies
+	- Additionally, processing words in order is not always the best way to process them.
+	![Long Range Dependencies](/notes/images/long_range_deps.png)
+- Lack of Parallelism:
+	- RNN's are inherently sequential, so they cannot be parallelized.
+	- This makes it hard to train RNN's on large datasets.
+	- This also makes it hard to train RNN's on GPUs, which are optimized for parallel computation.
+- Encoding input all into one vector at the very end creates an information bottleneck.
+
+Possible Solutions:
+- Use of Convolutional Neural Networks:
+	- Aggregate local contexts using 1D convolutions.
+	- This allows for parallelization.
+	- Does not solve information bottleneck problem and long range dependency problem.
+
+- Use of Attention:
+	- A viable solution that could potentially solve long range dependency problem and information bottleneck problem as well as parallelization problem.
+
+## Attention and Self-Attention
+### Attention
+- Attention treats each word's representation as a query to access and incorporate information from a set of values.
+- We can perform attention within a single sequence.
+![attention](/notes/images/sent_attention.png)
+- In the figure, you can see all words attend to all words in previous layer. All of these operations can happen in parallel.
+- $O(1)$ interaction distance between any two words.
+
+#### Attention as a Soft, Averaging Lookup Table
+- We can think of attention as a soft, averaging lookup table in a key-value store.
+- In a traditional lookup table:
+	- The query is input, it finds the matching key, and returns the corresponding value.
+- In Attention:
+	- Query matches softly to all keys with a weight between 0 and 1, and a weighted sum of the values is returned.
+![lookup](/notes/images/lookup.png)
+
+### Self-Attention
+- Keys, Queries, and Values all come from the same place.
+- Let $W_{1:n}$ be a sequence of words (e.g 'The cat sat on the mat').
+- Let $x_i$ be the embedding of the $i$ th word in the sequence.
+- Transform each word into a query, key, and value using three different weight matrices $Q, K, V$:
+	- $q_i = Qx_i$
+	- $k_i = Kx_i$
+	- $v_i = Vx_i$
+- You can compute the attention weights for each word by taking the dot product of the query and key for each word and applying the softmax function:
+	- $e_{ij} = q_i^Tk_j$
+	- $\alpha_{ij} = \text{softmax}(e_{ij})$
+- The final output for each word is the weighted sum of the values of all words using the affinity scores from attention:
+	- $o_i = \sum_{j=1}^n \alpha_{ij}v_j$
+#### Problems with Self-Attention and Their Solutions
+- Problem: 
+	- Self-attention is invariant to the order of the words in the sequence.
+	- Example: 'The cat sat on the mat' and 'Mat the on sat cat the' would have the same attention weights.
+- Solution: 
+	- Add positional encodings to the input embeddings.
+	- There will be a $p_i$ positional encoding for each word $x_i$.
+	- $\tilde{x_i} = x_i + p_i$
+	- $p_i$ could be a sinusoid function of the position of the word in the sequence.
+	$$ p_i = \begin{bmatrix} \sin(\frac{i}{10000^{0/2d}}) \\ \cos(\frac{i}{10000^{0/2d}}) \\ \vdots \\ \sin(\frac{i}{10000^{(d-1)/2d}}) \\ \cos(\frac{i}{10000^{(d-1)/2d})} \end{bmatrix} $$
+	- Position matrix can also be a learned parameter matrix.
+
+- Problem: 
+	- With attention, there are no non-linearities in the transformation
+- Solution:
+	- Put a feed-forward MLP network after each attention layer.
+![self-attention](/notes/images/sa_ff.png)
+
+- Problem:
+	- For tasks such as machine translation and language modeling, you should not be able to look at the future words in the sequence.
+- Solution:
+	- We mask out attention weights for future words by setting the attention weights for future words to $-\infty$.
+
+#### All Necessities for Self-Attention
+- Self-Attention: the basis of the method
+- Positional Encoding
+- Non-Linearities
+- Masking
+
+## Transformers
+- Transformer decoder used to build language models.
+- Very similar to self-attention block, but with a few differences:
+
+### Multi-Head Self-Attention
+- There are multiple attention heads with their own Key, Query, Value matrices, so there are different ways to look at different words in a sequence. (e.g. one head can look at the subject, one can look at the object, etc.)
+
+#### Implementing Multi-Head Self-Attention
+For self-attention on matrices:
+- Let $X = [x_1, x_2, \dots, x_n] \in \mathbb{R}^{n * d}$ be the input sequence.
+- Let $Q, K, V \in \mathbb{R}^{d * d}$ be the query, key, and value matrices.
+- This means that $XQ, XK, XV \in \mathbb{R}^{n * d}$.
+- Output is $O = \text{softmax}(XQ(XK)^T)XV$.
+	- First get attention weights by taking dot product of query and key for each word. (This is $XQ(XK)^T = XQ(K^TX^T) \in \mathbb{R}^{n*n}$). This gets all pairs of attention scores
+	- Next, perform softmax on each row to get attention weights for each word. Then multiply each row by the value matrix to get the final output. (This is $O = \text{softmax}(XQ(XK)^T)XV$)
+![multi-head](/notes/images/sa_matrix.png)
+For Multi-Head Self-Attention:
+- Let $X = [x_1, x_2, \dots, x_n] \in \mathbb{R}^{n * d}$ be the input sequence.
+- Let $Q_l, K_l, V_l \in \mathbb{R}^{d * \frac{d}{h}}$ be the query, key, and value matrices for the $l$ th head, where $h$ is the number of heads, and $l$ ranges from 1 to $h$.  
+- Each head performs its own self-attention independent of each other
+	- $O_l = \text{softmax}(XQ_l(XK_l)^T)XV_l$, where $O_l \in \mathbb{R}^{d*\frac{d}{h}}$.
+- At end, all outputs are concatenated to get final output $O \in \mathbb{R}^{d}$.
+	- $O = [O_1, O_2, \dots, O_h] \in \mathbb{R}^{d}$
+
+### Scaled Dot-Product Attention
+- As the dimensionality of vector increases, dot product value gets very large, which leads to large softmax values, which leads to very small gradients, which leads to vanishing gradients.
+- To solve this, we scale the dot product by $\frac{1}{\sqrt{\frac{d}{h}}}$.
+- Final output is $O_l = \text{softmax}(\frac{XQ_l(XK_l)^T}{\sqrt{\frac{d}{h}}})XV_l$.
+
+### Residial Connections
+- A trick to help models train better where insead of having $X^{i} = F(X^{i-1})$, we have $X^{i} = X^{i-1} + F(X^{i-1})$.
+- This allows for better gradient flow and helps with vanishing gradients or exploding gradients.
+
+### Layer Normalization
+- Within each layer, you want to get rid of uninformative variances in the model outputs, so you normalize the outputs of each layer so that they have mean 0 and variance 1.
+
+$$ output = \frac{input - \mu}{\sigma - \epsilon} * \gamma + \beta $$
+- $\gamma$ and $\beta$ are learned parameters that are optional
+
+- Here is the final Decoder Transformer Layer:
+![decoder](/notes/images/transformer_decoder.png)
+
+### Encoder Transformer Layer
+- The encoder is almost identical but without the masked self-attention layer.
+
+### Encoder-Decoder Transformer
+- You put the encoder and decoder together to get the final transformer model.
+- One final difference, you have a cross-multi-head attention layer between the encoder and decoder.
+- The decoder layer is the queries, and the encoder layer is the keys and values.
+	- Let $h_1, h_2, \dots, h_n$ be the hidden states of the encoder.
+	- Let $s_1, s_2, \dots, s_n$ be the hidden states of the decoder.
+	- The keys and values are $k_i = Kh_i$ and $v_i = Vh_i$.
+	- The queries are $q_i = Qs_i$.
+
