Fix grammar errors

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -16,7 +16,7 @@ enableToc: true
 
 - Linguists define **denotational semantics** as the isomorphic relation between the signifier (which is the word/symbol) and the signified (idea or thing). 
 - How is this implemented in traditional NLP:
-	- WordNet: a thesaurus that contains sets of words with their corresponding synonynms, antonyms and hypernyms.
+	- WordNet: a thesaurus that contains sets of words with their corresponding synonyms, antonyms and hyponyms.
 	- The problems with using WordNet to get meaning of words:
 		- Not scalable because it was human constructed
 		- Missing nuances in the meaning of words
@@ -72,13 +72,13 @@ enableToc: true
 	- With the word vectors, the gradients should be very sparse at each iteration because you don't see most words in each batch. This means you will only update the words that actually appear in the batch.
 ### Capturing Co-Occurrence Matrix
 - Each vector has counts on how many times each word occurs near other words.
-- You can build co-occurence matrices using windows similar to word2vec on a corpus.
+- You can build co-occurrence matrices using windows similar to word2vec on a corpus.
 - These become sparse and large in dimensionality.
-- You can reduce the dimensionality of the Co-Occurence vectors using singular value decomposition. You retain $k$ singular values to get a rank $k$ approximation of the co-occurence matrix.
+- You can reduce the dimensionality of the Co-Occurrence vectors using singular value decomposition. You retain $k$ singular values to get a rank $k$ approximation of the co-occurrence matrix.
 ### GloVe Algorithm 
 - You want to combine the use of count based methods (because they provide fast training and efficient statistics) and direct prediction methods (because easier to scale and generally work better).
 - We encode meaning components in vector differences
-	- A crucial insight: The ratios of co-occurence probabilities can encode meaning components of a word.
+	- A crucial insight: The ratios of co-occurrence probabilities can encode meaning components of a word.
 - You can encode linear meaning components into the word vectors.
 ### How to evaluate word vectors
 - Intrinsic Evaluations:
@@ -129,7 +129,7 @@ This modification adds a term to the cost function that will penalize large valu
 - Neural Language Models:
 	- We can take the Markovian Assumption of the N-Gram model and apply the same idea to a neural network with word embeddings as seen below:
 	![neural lm](/notes/images/neural_lm.png)
-	- The nerual network takes a fixed window of N words as inputs and feeds their word embeddings into a neural network. The output of the neural network is a probability distribution over the entire vocabulary.
+	- The neural network takes a fixed window of N words as inputs and feeds their word embeddings into a neural network. The output of the neural network is a probability distribution over the entire vocabulary.
 	- This allows distributed representations of words, so it solves storage and sparsity problems.
 	It does not allow us to use bigger/variable length context windows, and it does not give us a sense of the order of the words in the sentence.
 ### Recurrent Neural Networks
@@ -147,7 +147,7 @@ This modification adds a term to the cost function that will penalize large valu
 	- $x^{(t)}$ is the input vector at time step $t$.
 - Training an RNN Model:
 	- We get a big corpus of text $D = \{x^{(1)}, x^{(2)}, \dots, x^{(T)}\}$, and we feed it into an RNN-based language model.
-	- At each time step $t$, we comput the distribution over the next word $y^{(t)}$.
+	- At each time step $t$, we compute the distribution over the next word $y^{(t)}$.
 	- The loss function will be a cross-entropy loss function between the predicted distribution and the actual distribution:
 	$$ J(\theta) = - \sum_{w \in V}y_w^{(t)}\log(\hat{y}^{(t)}_w) = -\log(\hat{y}^{(t)}_w) $$
 	- We average this loss for the entire dataset at each time step.
@@ -161,7 +161,7 @@ This modification adds a term to the cost function that will penalize large valu
 			- The gradient with respect to the repeated weight matrix is the sum of the gradient with respect to each time it appears.
 			- Each value in the sum will be different because the hidden state at each time step is different, and there is a different upstream gradient at each time step.
 - Generating Text with RNN Model:
-	- We can use the RNN model to generate text be repreated sampling of the output as the next input
+	- We can use the RNN model to generate text be repeated sampling of the output as the next input
 
 ### Problems with Recurrent Neural Networks
 - Vanishing and Exploding Gradient Problem:
@@ -186,7 +186,7 @@ This modification adds a term to the cost function that will penalize large valu
 	- $\tilde{c}^{(t)} = tanh(W_c h^{(t-1)} + U_c x^{(t)} + b_c)$
 	- $c^{(t)} = f^{(t)} \odot c^{(t-1)} + i^{(t)} \odot \tilde{c}^{(t)}$
 	- $h^{(t)} = o^{(t)} \odot tanh(c^{(t)})$
-In $\tilde{c}^{(t)}$, we are computing the new cell content how we normally would. We multiply the information from the previous hidden state by a weight matrix $W_c$, and we multiply the input vector by a weight matrix $U_c$. We then add a bias $b_c$ and apply the tanh function. After this, to get the new cell state, we perform an elementwise multiplication between the lass cell state with the forget gate $f^{(t)}$ to "forget" information we don't need. We then add the new cell content $\tilde{c}^{(t)}$ multiplied by the write gate $i^{(t)}$ to add the new information. We then compute the new hidden state by multiplying the cell state by the read gate $o^{(t)}$ and applying the tanh function.
+In $\tilde{c}^{(t)}$, we are computing the new cell content how we normally would. We multiply the information from the previous hidden state by a weight matrix $W_c$, and we multiply the input vector by a weight matrix $U_c$. We then add a bias $b_c$ and apply the tanh function. After this, to get the new cell state, we perform an element-wise multiplication between the lass cell state with the forget gate $f^{(t)}$ to "forget" information we don't need. We then add the new cell content $\tilde{c}^{(t)}$ multiplied by the write gate $i^{(t)}$ to add the new information. We then compute the new hidden state by multiplying the cell state by the read gate $o^{(t)}$ and applying the tanh function.
 ![image](/notes/images/lstm.png)
 
 # Lecture 4: Sequence-to-Sequence Models, Machine Translation and Attention
@@ -261,7 +261,7 @@ $$ \argmax_y\{P(y | x)\} = \argmax_y\{P(x | y)P(y)\} $$
 ### Attention in Equations
 - We have hidden states $h_1, h_2, ..., h_n \in \mathbb{R}^h$ from the encoder.
 - At each time step $t$, we have decoder state $s_t \in \mathbb{R}^h$.
-- Attnetion scores for each hidden state at this encoder state are computed as follows:
+- Attention scores for each hidden state at this encoder state are computed as follows:
 $$ e_t = \begin{bmatrix} s_t^T h_1, s_t^T h_2 \dots s_t^T h_n\end{bmatrix}$$
 - We then apply the softmax function to get the attention weights:
 $$ \alpha_t = \text{softmax}(e_t) $$
@@ -391,8 +391,8 @@ For Multi-Head Self-Attention:
 - To solve this, we scale the dot product by $\frac{1}{\sqrt{\frac{d}{h}}}$.
 - Final output is $O_l = \text{softmax}(\frac{XQ_l(XK_l)^T}{\sqrt{\frac{d}{h}}})XV_l$.
 
-### Residial Connections
-- A trick to help models train better where insead of having $X^{i} = F(X^{i-1})$, we have $X^{i} = X^{i-1} + F(X^{i-1})$.
+### Residual Connections
+- A trick to help models train better where instead of having $X^{i} = F(X^{i-1})$, we have $X^{i} = X^{i-1} + F(X^{i-1})$.
 - This allows for better gradient flow and helps with vanishing gradients or exploding gradients.
 
 ### Layer Normalization
