Add san fran travel post and rename files

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -136,7 +136,7 @@ This modification adds a term to the cost function that will penalize large valu
 - RNNs are a type of neural network that allows us to use variable length context windows and also gives us a sense of the order of the words in the sentence.
 - The Basic Idea:
 	- We feed in the first word of the sentence in to the network and receive an output vector. We then feed the second word of the sentence into the same network, but we also feed in the output of the hidden layer from the first word. We then receive a new output vector. We continue this process until we have processed the entire sentence. Feeding the output of the hidden layer from the previous word allows us to use the context of the previous words in the sentence.
-	![rnn](/notes/images/RNN.png)
+	![rnn](/notes/images/rnn.png)
 - Simple RNN:
 	- Let $x^{(t)}$ be the input vector at time step $t$, $h^{(t)}$ be the hidden state at time step $t$, and $y^{(t)}$ be the output at time step $t$.
 	- $\hat{y}^{(t)} = softmax(Uh^{(t)} + b_2) $
